--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p class="description">
                         USE THIS VPN IF THE OTHER SITE'S DIDNT LOAD
                     </p>
-                    <a href="https://tinyurl.com/yu9wxrex" target="_blank" class="action-btn secondary">
+                    <a href="https://www.urban-vpn.com/" target="_blank" class="action-btn secondary">
                         <i class="fas fa-external-link-alt"></i> WEBSITE
                     </a>
                 </div>
@@ -72,7 +72,7 @@
                     <p class="description">
                         COOKIE EDITOR ITS VERY USEFUL
                     </p>
-                    <a href="https://tinyurl.com/yu9wxrex" target="_blank" class="action-btn secondary">
+                    <a href="https://cookie-editor.com/" target="_blank" class="action-btn secondary">
                         <i class="fas fa-external-link-alt"></i> WEBSITE
                     </a>
                 </div>
