--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         ALL AGE BYPASSER WORKING ON 13+ ACCOUNT
                     </p>
                     <a href="https://tinyurl.com/yu9wxrex" target="_blank" class="action-btn secondary">
-                        <i class="fas fa-external-link-alt"></i> WEBSITE
+                        <i class="fas fa-external-link-alt"></i> BYPASSER
                     </a>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                         USE THIS VPN IF THE OTHER SITE'S DIDNT LOAD
                     </p>
                     <a href="https://www.urban-vpn.com/" target="_blank" class="action-btn secondary">
-                        <i class="fas fa-external-link-alt"></i> WEBSITE
+                        <i class="fas fa-external-link-alt"></i> URBAN VPN
                     </a>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                         COOKIE EDITOR ITS VERY USEFUL
                     </p>
                     <a href="https://cookie-editor.com/" target="_blank" class="action-btn secondary">
-                        <i class="fas fa-external-link-alt"></i> WEBSITE
+                        <i class="fas fa-external-link-alt"></i> COOKIE EDITOR
                     </a>
                 </div>
             </div>
