--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUSTMETHOD - Dashboard</title>
+    <title>Splunk #1 - Dashboard</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -87,7 +87,7 @@
                     <p class="description">
                         Advanced link hiding tool for enhanced privacy and security protection
                     </p>
-                    <a href="https://variares-hyperlink-9jmo2y.vercel.app/" target="_blank" class="action-btn tertiary">
+                    <a href="https://shortenerv2.vercel.app/" target="_blank" class="action-btn tertiary">
                         <i class="fas fa-link"></i> LINK HIDER
                     </a>
                 </div>
