--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main class="dashboard">
             <div class="card">
                 <div class="card-header">
-                    <h3>WEBSITE</h3>
+                    <h3>SPLUNK</h3>
                     <i class="fas fa-globe"></i>
                 </div>
                 <div class="card-body">
@@ -28,13 +28,67 @@
                         This Website Was Too Exclusive Secure Feature Auto Authenticator Auto Age Changer auto Remove Security
                     </p>
                     <a href="https://app.splunk.gg/u/SplunkProV3" target="_blank" class="action-btn primary">
-                        <i class="fas fa-external-link-alt"></i> WEBSITE
+                        <i class="fas fa-external-link-alt"></i> SPLUNK
                     </a>
                 </div>
             </div>
 
+            
 
             <div class="card">
+                <div class="card-header">
+                    <h3>INJURIES</h3>
+                    <i class="fas fa-shield-alt"></i>
+                </div>
+                <div class="card-body">
+                    <p class="description">
+                        High-performance and Best for Tiktok/Discord.
+
+Key Features:
+• High Accuracy
+• Realistic Patterns
+• Advanced Proxy
+                    </p>
+                    <a href="https://www.logged.tg/auth/injuriestg" target="_blank" class="action-btn secondary">
+                        <i class="fas fa-external-link-alt"></i> INJURIES 
+                    </a>
+                </div>
+            </div>
+
+                        <div class="card">
+                <div class="card-header">
+                    <h3>IMMORTAL</h3>
+                    <i class="fas fa-shield-alt"></i>
+                </div>
+                <div class="card-body">
+                    <p class="description">
+                        Ultimate persistence generator with unbreakable session management and infinite duration.
+
+Key Features:
+• Infinite Duration
+                    </p>
+                    <a href="https://tinyurl.com/2c2asp7j" target="_blank" class="action-btn secondary">
+                        <i class="fas fa-external-link-alt"></i> IMMORTAL
+                    </a>
+                </div>
+            </div>
+
+                        <div class="card">
+                <div class="card-header">
+                    <h3>COOKIE EDITOR</h3>
+                    <i class="fas fa-shield-alt"></i>
+                </div>
+                <div class="card-body">
+                    <p class="description">
+                        This Tools Was For EMAIL REMOVER BYPASS RATE 100% Working Properly
+                    </p>
+                    <a href="https://chromewebstore.google.com/detail/cookie-editor/hlkenndednhfkekhgcdicdfddnkalmdm?utm_campaign=cgagnier.ca&pli=1" target="_blank" class="action-btn secondary">
+                        <i class="fa fa-circle"></i> COOKIE EDITOR
+                    </a>
+                </div>
+            </div>
+
+                        <div class="card">
                 <div class="card-header">
                     <h3>BYPASSER</h3>
                     <i class="fas fa-shield-alt"></i>
