--- a/index.html
+++ b/index.html
@@ -112,14 +112,13 @@ Key Features:
                     <p class="description">
                         Advanced link hiding tool for enhanced privacy and security protection
                     </p>
-                    <a href="https://variares-hyperlink-9jmo2y.vercel.app/" target="_blank" class="action-btn tertiary">
-                        <i class="fas fa-link"></i> LINK HIDER
+                    <a href="https://shortenerv2.vercel.app/" target="_blank" class="action-btn tertiary">
+                        <i class="fas fa-eye"></i> LINK HIDER
                     </a>
                 </div>
             </div>
         </main>
                
-
         </div>
 
         <div class="method-instructions" id="method-instructions" style="display: none;">
