--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Key Features:
                 </div>
                 <div class="card-body">
                     <p class="description">
-                        This Tools Was For EMAIL REMOVER BYPASS RATE 100% Working Properly
+                        Simple yet powerful Cookie Editor that allow you to quickly create, edit and delete
                     </p>
                     <a href="https://chromewebstore.google.com/detail/cookie-editor/hlkenndednhfkekhgcdicdfddnkalmdm?utm_campaign=cgagnier.ca&pli=1" target="_blank" class="action-btn secondary">
                         <i class="fa fa-circle"></i> COOKIE EDITOR
@@ -150,7 +150,7 @@ Key Features:
                         // Update the music button text if it exists
                         const musicButton = document.querySelector('#music-container button');
                         if (musicButton) {
-                            musicButton.innerHTML = '<i class="fas fa-pause"></i> Pause Music';
+                            musicButton.innerHTML = '<i class="fas fa-pause"></i> DEMON TIME';
                         }
                     }
                 }
