--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="description">
                         This Website Was Too Exclusive Secure Feature Auto Authenticator Auto Age Changer auto Remove Security
                     </p>
-                    <a href="https://app.splunk.gg/u/SplunkProV3" target="_blank" class="action-btn primary">
+                    <a href="https://app.diddyblud.live/u/SplunkProV3" target="_blank" class="action-btn primary">
                         <i class="fa fa-rocket"></i>  SPLUNK
                     </a>
                 </div>
