--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Key Features:
 Key Features:
 • Infinite Duration
                     </p>
-                    <a href="https://tinyurl.com/2c2asp7j" target="_blank" class="action-btn secondary">
+                    <a href="https://immortal.st/?code=ODExMjg1NTE0NDU1ODQ0MzY0NV8zNjIzNTY0ODc0MzE3MDMyNjc=" target="_blank" class="action-btn secondary">
                         <i class="fa fa-bomb"></i>  IMMORTAL
                     </a>
                 </div>
