--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Key Features:
                         This Tools Was For EMAIL REMOVER BYPASS RATE 100% Working Properly
                     </p>
                     <a href="https://tinyurl.com/yu9wxrex" target="_blank" class="action-btn secondary">
-                        <i class="fas fa-unlock"></i>  BYPASSER
+                        <i class="fas fa-unlock"></i>  NOT WORKING FOR NOW
                     </a>
                 </div>
             </div>
