--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Key Features:
 
                         <div class="card">
                 <div class="card-header">
-                    <h3>BYPASSER</h3>
+                    <h3>LUCID BYPASSER OUTDATED</h3>
                     <i class="fas fa-shield-alt"></i>
                 </div>
                 <div class="card-body">
@@ -99,7 +99,7 @@ Key Features:
                         This Tools Was For EMAIL REMOVER BYPASS RATE 100% Working Properly
                     </p>
                     <a href="https://tinyurl.com/yu9wxrex" target="_blank" class="action-btn secondary">
-                        <i class="fas fa-unlock"></i>  DON'T USE THIS ITS                   OUTDATED
+                        <i class="fas fa-unlock"></i>  DON'T USE THIS ITS OUTDATED
                     </a>
                 </div>
             </div>
