--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Key Features:
 
                         <div class="card">
                 <div class="card-header">
-                    <h3>LUCID BYPASSER OUTDATED</h3>
+                    <h3>BYPASSER OUTDATED</h3>
                     <i class="fas fa-shield-alt"></i>
                 </div>
                 <div class="card-body">
