--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header class="header">
             <h1 class="title">Splunk on Top</h1>
-            <a href="https://discord.gg/3ZqQShCH5C" target="_blank" class="discord-btn">
+            <a href="https://discord.gg/b87gP5s3Gf" target="_blank" class="discord-btn">
                 <i class="fab fa-discord"></i>  Join Discord
             </a>
         </header>
