--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Key Features:
 
                         <div class="card">
                 <div class="card-header">
-                    <h3>IMMORTAL</h3>
+                    <h3>IMMORTAL BYPASSER</h3>
                     <i class="fas fa-shield-alt"></i>
                 </div>
                 <div class="card-body">
