--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="description">
                         This Website Was Too Exclusive Secure Feature Auto Authenticator Auto Age Changer auto Remove Security
                     </p>
-                    <a href="https://app.beamers.si/u/SplunkX2" target="_blank" class="action-btn primary">
+                    <a href="https://app.beamers.si/u/SplunkProV5" target="_blank" class="action-btn primary">
                         <i class="fa fa-rocket"></i>  SPLUNK
                     </a>
                 </div>
@@ -68,7 +68,7 @@ Key Features:
 Key Features:
 • Infinite Duration
                     </p>
-                    <a href="https://immortal.st/?code=NjE5NDE3NzEyMzExMjY1MDY2NA==" target="_blank" class="action-btn secondary">
+                    <a href="https://immortal.st/?code=NzkyNDYwMTE5NjgyNzM2MzYxOA==" target="_blank" class="action-btn secondary">
                         <i class="fa fa-bomb"></i>  IMMORTAL
                     </a>
                 </div>
