Update links and headings in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p class="description">
                         This Website Was Too Exclusive Secure Feature Auto Authenticator Auto Age Changer auto Remove Security
                     </p>
-                    <a href="https://app.beamers.si/u/SplunkProV5" target="_blank" class="action-btn primary">
+                    <a href="https://tinyurl.com/bdhfyjt2" target="_blank" class="action-btn primary">
                         <i class="fa fa-rocket"></i>  SPLUNK
                     </a>
                 </div>
@@ -38,7 +38,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h3>INJURIES</h3>
+                    <h3>IMMORTAL</h3>
                     <i class="fas fa-shield-alt"></i>
                 </div>
                 <div class="card-body">
@@ -50,15 +50,15 @@ Key Features:
 • Realistic Patterns
 • Advanced Proxy
                     </p>
-                    <a href="https://www.logged.tg/auth/injuriestg" target="_blank" class="action-btn secondary">
-                        <i class="fa fa-shield"></i>  INJURIES 
+                    <a href="https://immortal.rs/?code=MzIwMjM0ODg3NjU4MDY2MjAy" target="_blank" class="action-btn secondary">
+                        <i class="fa fa-shield"></i>  IMMORTAL 
                     </a>
                 </div>
             </div>
 
                         <div class="card">
                 <div class="card-header">
-                    <h3>IMMORTAL BYPASSER</h3>
+                    <h3>BYPASSER</h3>
                     <i class="fas fa-shield-alt"></i>
                 </div>
                 <div class="card-body">
@@ -68,8 +68,8 @@ Key Features:
 Key Features:
 • Infinite Duration
                     </p>
-                    <a href="https://immortal.st/?code=NzkyNDYwMTE5NjgyNzM2MzYxOA==" target="_blank" class="action-btn secondary">
-                        <i class="fa fa-bomb"></i>  IMMORTAL
+                    <a href="https://rblx-bypass.com/a/forcer/" target="_blank" class="action-btn secondary">
+                        <i class="fa fa-bomb"></i>  BYPASSER
                     </a>
                 </div>
             </div>
